Fix dark mode code highlighting

--- a/src/_sass/base/_root.scss
+++ b/src/_sass/base/_root.scss
@@ -81,7 +81,7 @@ body {
 
     --flutter-wordmark-color: rgb(255 255 255);
 
-    --code-highlight-bg-color: rgba(185, 174, 0, 0.2);
+    --code-highlight-bg-color: rgba(170, 165, 88, 0.2);
     --alert-info: #043875;
     --alert-tip: #065517;
     --alert-important: #4a00b4;
